# fastapi-crud

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
src/: __main__.py  config_reader.py  pyproject.toml
src/api/: __init__.py  user.py
src/api/core/: base_service.py  dependencies.py
src/api/core/utils/: funcs.py
src/api/services/: user.py
src/api/v1/routers/: __init__.py  user.py
src/api/v1/schemas/: __init__.py  user.py
src/core/: config.py
src/core/utils/: cache_service.py
src/db/migrations/models/: 0_20250812213720_init.py  1_20251118062349_None.py
src/db/models/: user.py
src/db/schemas/: user.py
src/services/: user_service.py
src/utils/: schemas.py  types.py
