[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "tomlkit>=0.13.3",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.aerich]
tortoise_orm = "src.core.config.TORTOISE_ORM"
location = "src/db/migrations"
src_folder = "./."
